--- a/index.html
+++ b/index.html
@@ -1,6 +1,25 @@
 <html>
-  <head><!-- later --></head>
+  <head>
+    <style>
+      html, body {
+        margin: 0;
+        padding: 0;
+      }
+      
+      .main {
+        align-items: center;
+        display: flex;
+        height: 100vh;
+        justify-content: center;
+      }
+      
+      .title {
+        font-family: sans-serif;
+        font-size: 10rem;
+      }
+    </style>
+  </head>
   <body>
-    <h1>Adorable Horror!</h1>
+    <h1 class="title">Adorable Horror!</h1>
   </body>
 </html>
