forgot main tag

--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
     </style>
   </head>
   <body>
-    <h1 class="title">Adorable Horror!</h1>
+    <main class="main">
+      <h1 class="title">Adorable Horror!</h1>
+    </main>
   </body>
 </html>
